tooling/nargo_cli/tests/snapshots/execution_failure/regression_8195/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: attempt to multiply with overflow
  ┌─ src/main.nr:3:21
  │
3 │     ((13834 - a) % (G_A * G_A))
  │                     ---------
  │
  = Call stack:
    1. src/main.nr:3:21

Failed assertion
