tooling/nargo_cli/tests/snapshots/execution_failure/regression_8195/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Attempt to multiply with overflow
  ┌─ src/main.nr:3:21
  │
3 │     ((13834 - a) % (G_A * G_A))
  │                     ---------
  │

Error interpreting main function
